--- a/styles.css
+++ b/styles.css
@@ -59,6 +59,7 @@ body {
 .card-info {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     margin-bottom: 20px;
     color: #00fff7;
     font-size: 0.9em;
@@ -107,7 +108,17 @@ hr {
 .card-creator a:hover {
     color: #8E9775;
 }
-  
+
+.nome-sherebie {
+    margin: 0 20px; 
+    text-align: center;
+    font-weight: bold;
+    font-size: 1em;
+    color: #000000; 
+    font-weight: bold;
+    font-size: 18px;
+}
+
 .preco span {
     font-weight: bold;
 }
@@ -131,4 +142,8 @@ hr {
       width: 90%;
       max-width: 320px;
     }
+}
+
+.nome-sherebie{
+
 }
