--- a/styles.css
+++ b/styles.css
@@ -6,13 +6,83 @@
   
 body {
     display: flex;
+    flex-direction: column; 
     align-items: center;
-    justify-content: center;
+    justify-content: flex-start; 
     min-height: 100vh;
-    background-color: #ffffff;
+    background-color: #FAF2DA;
     font-family: 'Arial', sans-serif;
 }
   
+header {
+    background-color: #ffffff;
+    padding: 15px 40px;
+    color: #000000;
+    position: sticky;
+    top: 0;
+    width: 100%;
+    z-index: 100;
+    border-bottom: 1px solid #e5e5e5;
+    display: flex;
+    justify-content: flex-start; /* Garante que a logo e o título fiquem alinhados à esquerda */
+    align-items: center;
+    flex-wrap: wrap; 
+}
+
+header .logo {
+    margin-right: 10px; /* Pequeno espaço entre a logo e o título */
+}
+
+header .logo img {
+    height: 50px;
+    width: 50px;
+    border-radius: 50%;
+    object-fit: cover;
+    margin-right: 10px; /* Pequeno espaço entre a logo e o h1 */
+}
+
+header h1 {
+    font-size: 1.5rem;
+    font-weight: bold;
+    color: #8E9775;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    font-family: 'Helvetica Neue', sans-serif;
+    margin: 0; /* Remove margens padrão */
+}
+
+nav ul {
+    display: flex;
+    gap: 10px; /* Espaço entre os ícones */
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+nav ul li {
+    display: inline-block;
+}
+
+.filmes {
+    margin-left: 280px;
+}
+
+nav ul li a {
+    text-decoration: none;
+    color: #8E9775;
+    font-weight: normal;
+    padding: 5px 10px;
+    transition: color 0.3s ease;
+}
+
+nav ul li a:hover {
+    color: #E28F83;
+}
+
+header h1 a:hover {
+    color: #E28F83;
+}
+
 .cardlist {
     display: flex;
     flex-wrap: wrap;
@@ -21,12 +91,11 @@ body {
     padding: 20px;
 }
   
-/* Estilo do carrossel */
 .carousel {
     position: relative;
     width: 100%;
     height: auto;
-    overflow: hidden; /* Esconde partes das imagens que saem do contêiner */
+    overflow: hidden; 
   }
   
   .carousel-image {
@@ -36,32 +105,30 @@ body {
     top: 0;
     left: 0;
     opacity: 0;
-    animation: carouselAnimation 9s infinite; /* Animação para troca de imagens */
+    animation: carouselAnimation 9s infinite; 
   }
   
   .carousel-image:nth-child(1) {
-    animation-delay: 0s; /* Primeira imagem */
+    animation-delay: 0s; 
   }
   
   .carousel-image:nth-child(2) {
-    animation-delay: 3s; /* Segunda imagem */
+    animation-delay: 3s; 
   }
   
   .carousel-image:nth-child(3) {
-    animation-delay: 6s; /* Terceira imagem */
+    animation-delay: 6s; 
   }
   
-  /* Animação */
   @keyframes carouselAnimation {
     0%, 33% {
-      opacity: 1; /* Imagem visível */
+      opacity: 1; 
     }
     34%, 100% {
-      opacity: 0; /* Imagem invisível */
+      opacity: 0; 
     }
   }
  
-/* Estilos do cartão (mantendo os existentes) */
 .card {
     background-color: #E28F83;
     border-radius: 15px;
@@ -104,6 +171,19 @@ body {
     margin-bottom: 20px;
     color: #00fff7;
     font-size: 0.9em;
+    gap: 15px; 
+}
+
+.card-infoo {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 20px;
+    color: #00fff7;
+    font-size: 0.9em;
+    gap: 15px; 
+    margin-left: 270px;
+    margin-top: 20px;
 }
   
 .card-info .preco, .card-info .dias {
@@ -172,7 +252,6 @@ hr {
     color: #8daabf;
 }
   
-/* Para deixar responsivo */
 @media (max-width: 768px) {
     .cardlist {
       flex-direction: column;
