--- a/styles.css
+++ b/styles.css
@@ -84,11 +84,11 @@ header h1 a:hover {
 }
 
 .cardlist {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 20px;
-    justify-content: center;
+    display: grid;
+    gap: 20px;;
     padding: 20px;
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    width: 100%;
 }
   
 .carousel {
